--- a/landing-page/public/locales/es.json
+++ b/landing-page/public/locales/es.json
@@ -80,12 +80,12 @@
         "title": "Confían en nosotros",
         "subtitle": "Descubre cómo Stockman ayuda a los comerciantes cada día.",
         "t1": "Desde que uso Stockman, ya no pierdo dinero por roturas de stock. ¡La IA siempre me avisa en el momento justo!",
-        "t2": "La app es muy sencilla. Mis empleados la dominaron en 10 minutos. La gestión de caja es perfecta.",
-        "t3": "¡Me encanta el marketplace! Puedo comparar precios de mis proveedores y pedir directamente. Un gran ahorro de tiempo.",
         "t1_author": "Amadou Diallo",
         "t1_job": "Electronics Shop",
+        "t2": "La app es muy sencilla. Mis empleados la dominaron en 10 minutos. La gestión de caja es perfecta.",
         "t2_author": "Sarah Kouassi",
         "t2_job": "Express Supermarket",
+        "t3": "¡Me encanta el marketplace! Puedo comparar precios de mis proveedores y pedir directamente. Un gran ahorro de tiempo.",
         "t3_author": "Paul N'Goma",
         "t3_job": "Central Pharmacy"
     },
@@ -147,8 +147,39 @@
         "community": "Comunidad",
         "privacy": "Privacidad",
         "terms": "Condiciones de uso",
+        "delete_account": "Supprimer mon compte",
         "legal_notice": "Aviso legal",
         "copyright": "© 2026 Stockman. Todos los derechos reservados."
+    },
+    "delete_account": {
+        "title": "Suppression de Compte & Données",
+        "subtitle": "Conformément au Règlement Général sur la Protection des Données (RGPD) et au Droit à l'Oubli.",
+        "version": "Dernière mise à jour : 18 Février 2026",
+        "intro": "Vous avez le contrôle total de vos données. Si vous souhaitez cesser d'utiliser Stockman, vous pouvez supprimer votre compte et l'intégralité des données associées de deux manières.",
+        "method_app_title": "1. Via l'application (Recommandé)",
+        "method_app_desc": "C'est la méthode la plus rapide et la plus sécurisée car elle valide votre identité instantanément.",
+        "method_app_steps": [
+            "Ouvrez l'application Stockman.",
+            "Allez dans l'onglet **Réglages**.",
+            "Faites défiler jusqu'à la section **Zone de danger**.",
+            "Appuyez sur **Supprimer mon compte**.",
+            "Confirmez en saisissant votre mot de passe."
+        ],
+        "method_web_title": "2. Via ce formulaire (Sans l'application)",
+        "method_web_desc": "Si vous n'avez plus accès à l'application, vous pouvez nous envoyer une demande manuelle de suppression.",
+        "method_web_note": "Note : Pour des raisons de sécurité, nous devrons vérifier votre identité par email ou téléphone avant de procéder à la suppression.",
+        "data_erased_title": "Quelles données seront effacées ?",
+        "data_erased_desc": "La suppression de votre compte est **définitive** et irréversible. Les données suivantes seront immédiatement supprimées de nos serveurs de production :",
+        "data_erased_list": [
+            "Votre profil utilisateur et identifiants.",
+            "Toutes vos boutiques et points de vente.",
+            "L'intégralité de votre inventaire et catalogue produits.",
+            "Toutes vos transactions de vente et historiques comptables.",
+            "Vos listes de clients, fournisseurs et historiques d'achats.",
+            "Vos accès à l'Assistant IA et historiques de chat."
+        ],
+        "retention_title": "Délai de traitement",
+        "retention_desc": "Une fois la demande validée, vos données sont immédiatement marquées pour suppression. L'effacement complet de nos sauvegardes (backups) peut prendre jusqu'à 30 jours, pendant lesquels vos données restent inaccessibles et non traitées."
     },
     "newsletter": {
         "title": "Conviértete en un experto en stock",
