--- a/frontend/locales/pt.json
+++ b/frontend/locales/pt.json
@@ -316,7 +316,7 @@
   "premium": {
     "with_premium_you_can": "Com Premium, pode:",
     "upgrade_now": "Atualizar para Premium",
-    "pricing_hint": "2 500 FCFA / mês",
+    "pricing_hint": "{{price}} {{currency}} {{period}}",
     "features": {
       "orders": {
         "title": "Encomendas Inteligentes",
