--- a/landing-page/public/locales/ff.json
+++ b/landing-page/public/locales/ff.json
@@ -1,65 +1,145 @@
 {
     "nav": {
         "features": "Geɗe gollirɗe",
-        "pricing": "Cogguuji",
-        "about": "Humpito men",
+        "resources": "Ressources",
         "blog": "Blog",
-        "contact": "Jokkondir en",
+        "home": "Connexion",
         "login": "Naatu",
-        "get_started": "Fuɗɗu jooni"
+        "free_trial": "Essai Gratuit"
     },
     "hero": {
-        "badge": "Limngal 1 e njuɓɓudi njaaƴu e Afrik 🌍",
         "title_start": "Koldinu",
-        "title_highlight": "bitik maa",
         "title_end": "no gollanteeɗo nii",
-        "desc": "Njuɓɓudi POS timmundi, koldinaagu stok e hiisawal. Ina weeɓi, ina semmbi te ina huutoree kala ɗo — hay so internet alaa.",
-        "cta_primary": "Eto feyeere",
-        "cta_secondary": "Yillu eto",
-        "trust": "Ko ɓuri 5000 njaaƴoowo ina hoolii en"
-    },
-    "features_main": {
-        "title": "Kala ko mbuɗ-ɗaa ngam ɓeydagol",
-        "subtitle": "Accu windugol e kayeeji. Naatu e koldinaagu mbeesu.",
-        "f1_title": "Koldinaagu Stok",
-        "f1_desc": "Topptu gollirɗe maa e waktu mum te heɓu tinndinorgol so stok ina nawa.",
-        "f2_title": "POS (Caisse)",
-        "f2_desc": "Jaabo kilyanɓe maa no lolliri te neldu resit mbeesu e WhatsApp.",
-        "f3_title": "Hiisawal (Accounting)",
-        "f3_desc": "Yillu ɓurale, cogguuji e njaayu maa e dow laawol gollirgal.",
-        "f4_title": "Gollal tawa internet alaa",
-        "f4_desc": "Jokku njaayu maa hay so internet dakkii. Simay e nder sgoŋ so internet arti.",
-        "f5_title": "IA (Hakkille mbeesu)",
-        "f5_desc": "Tingunoo waktuuji njaayu keewɗo te moƴƴin cogguuji jalla maa.",
-        "f6_title": "Marketplace",
-        "f6_desc": "Yamir gollirɗe maa e ñootooɓe ɓurɓe moƴƴude e cogguuji ɓurɗi weeɓde."
+        "subtitle": "La solution de gestion de stock intelligente dopée à l'IA pour automatiser vos commandes et maximiser vos profits.",
+        "cta": "Démarrer maintenant"
     },
     "stats": {
-        "merchants": "Njaaƴooɓe gollanteeɓe",
+        "shops": "Commerces équipés",
         "transactions": "Njaayuuji lewru",
-        "availability": "Waktu gollal",
+        "satisfaction": "Clients satisfaits",
         "support": "Ballo 24/7"
+    },
+    "features": {
+        "title": "Vos outils quotidiens",
+        "subtitle": "Une suite complète d'onglets pour gérer chaque aspect de votre business.",
+        "dashboard": {
+            "title": "Accueil",
+            "desc": "Vue d'overview de votre activité, alertes de stock critiques et accès rapide à l'assistant IA."
+        },
+        "products": {
+            "title": "Produits",
+            "desc": "Gestion d'inventaire, scan code-barres, organisation par catégories et valorisation du stock."
+        },
+        "pos": {
+            "title": "Caisse",
+            "desc": "Encaissez vos clients rapidement, générez des reçus numériques et mettez à jour le stock en temps réel."
+        },
+        "suppliers": {
+            "title": "Fournisseurs",
+            "desc": "Annuaire fournisseurs, historique des commandes et accès à la Marketplace \"Bouton-à-Bouton\"."
+        },
+        "orders": {
+            "title": "Commandes",
+            "desc": "Suivi des commandes d'achat, réception des marchandises et mise à jour automatique des stocks."
+        },
+        "accounting": {
+            "title": "Comptabilité",
+            "desc": "Suivi précis des ventes, des dépenses et calcul automatique de la rentabilité par période."
+        },
+        "clients": {
+            "title": "Clients",
+            "desc": "Base de données clients, historique des achats et outils de fidélisation intégrés."
+        },
+        "settings": {
+            "title": "Réglages",
+            "desc": "Personnalisation de l'application, gestion des utilisateurs et configuration de votre boutique."
+        }
+    },
+    "showcase": {
+        "title": "L'interface qui change tout",
+        "subtitle": "Un design épuré, pensé pour vous faire gagner du temps.",
+        "app_interface": "Interface App"
+    },
+    "how_it_works": {
+        "title": "Démarrage rapide",
+        "subtitle": "Trois étapes simples pour transformer votre commerce.",
+        "step1": {
+            "title": "Créez votre compte",
+            "desc": "Téléchargez l'application et configurez votre boutique en moins de 2 minutes."
+        },
+        "step2": {
+            "title": "Scannez vos produits",
+            "desc": "Utilisez la caméra de votre téléphone pour ajouter rapidement votre stock."
+        },
+        "step3": {
+            "title": "Encaissez & Suivez",
+            "desc": "Faites vos premières ventes et regardez vos statistiques grimper en temps réel."
+        }
+    },
+    "testimonials": {
+        "title": "Ils nous font confiance",
+        "subtitle": "Découvrez comment Stockman aide les commerçants au quotidien.",
+        "t1": "Depuis que j'utilise Stockman, je ne perds plus d'argent à cause des ruptures de stock. L'IA me prévient toujours au bon moment !",
+        "t1_author": "Amadou Diallo",
+        "t1_job": "Boutique Électronique",
+        "t2": "L'application est tellement simple. Mes employés l'ont prise en main en 10 minutes. La gestion de caisse est parfaite.",
+        "t2_author": "Sarah Kouassi",
+        "t2_job": "Supermarché Express",
+        "t3": "J'adore la marketplace ! Je peux comparer les prix de mes fournisseurs et commander directement. Un gain de temps énorme.",
+        "t3_author": "Paul N'Goma",
+        "t3_job": "Pharmacie Centrale"
     },
     "pricing": {
         "title": "Cogguuji weeɓtuɗi, alaa lën-lën",
         "subtitle": "Fuɗɗu feyeere, ɓeydu no mbuɗ-ɗaa nii.",
-        "free_title": "Fuɗɗoode",
-        "free_price": "0 FCFA",
-        "free_desc": "Ngam njaaƴooɓe famarɓe",
-        "premium_title": "Premium",
-        "premium_price": "5,000 FCFA",
-        "premium_desc": "Semmbe timmuɗo ngam njaaƴu maa",
-        "feature_pos": "Njuɓɓudi POS timmundi",
-        "feature_stock": "Koldinaagu stok",
-        "feature_accounting": "Hiisawal",
-        "feature_multi_user": "Gollotooɓe ɓurtuɓe",
-        "feature_ai": "Saytu IA",
-        "cta": "Suɓu mbeesu maa"
+        "month": "/mois",
+        "popular": "Populaire",
+        "starter": {
+            "name": "Starter",
+            "f1": "1 Utilisateur, 1 Boutique",
+            "f2": "100 produits",
+            "f3": "14 Requêtes IA / semaine",
+            "f4": "Rapports sur 30 jours",
+            "cta": "3 Mois Gratuits"
+        },
+        "business": {
+            "name": "Premium",
+            "f1": "Utilisateurs illimités",
+            "f2": "Produits illimités",
+            "f3": "Assistant IA illimité",
+            "f4": "Marketplace & CRM",
+            "f5": "Analyses & Rapports illimités",
+            "cta": "3 Mois Gratuits"
+        },
+        "enterprise": {
+            "name": "Enterprise",
+            "price": "Sur devis",
+            "f1": "Multi-boutiques",
+            "f2": "Support dédié 24/7",
+            "f3": "API & Intégrations",
+            "f4": "IA personnalisée",
+            "cta": "Contacter"
+        }
+    },
+    "faq": {
+        "title": "Naamne keewɗe",
+        "q1": "Mbele ina golla tawa internet alaa?",
+        "a1": "Eyyo, Stockman ina golla e gollal tawa internet alaa. Humpito maa ena simaye so internet arti.",
+        "q2": "Mbele humpitooji am ena aaraa?",
+        "a2": "Hoolu ɗum. Emin kuutorɗe njuɓɓudi aaraango hiisawal ngam aarude kala humpitooji njaaƴu maa."
+    },
+    "download": {
+        "title": "Mbele a paree ngir ɓeydude mbeesu maa?",
+        "subtitle": "Jokku e ujunnaaje njaaƴooɓe mbeesuugol njuɓɓudi mum en.",
+        "app_store": "App Store",
+        "google_play": "Google Play",
+        "secure": "Feygooji aaraango",
+        "support": "Ballo karallagal",
+        "updates": "Mbeesuuji jokkuɗi"
     },
     "footer": {
         "desc": "Solisyon numéro 1 ngir mbeesu njaayu e Afrik.",
         "product": "Gollirgal",
-        "company": "Kompani",
         "support": "Ballo",
         "legal": "Sariya",
         "help_center": "Suudu ballo",
@@ -67,8 +147,39 @@
         "community": "Mboolaari",
         "privacy": "Dawrugol njaayu",
         "terms": "Sarɗiiji kuutoragol",
+        "delete_account": "Supprimer mon compte",
         "legal_notice": "Xibaaru sariya",
         "copyright": "© 2026 Stockman. Humpito aaraango."
+    },
+    "delete_account": {
+        "title": "Suppression de Compte & Données",
+        "subtitle": "Conformément au Règlement Général sur la Protection des Données (RGPD) et au Droit à l'Oubli.",
+        "version": "Dernière mise à jour : 18 Février 2026",
+        "intro": "Vous avez le contrôle total de vos données. Si vous souhaitez cesser d'utiliser Stockman, vous pouvez supprimer votre compte et l'intégralité des données associées de deux manières.",
+        "method_app_title": "1. Via l'application (Recommandé)",
+        "method_app_desc": "C'est la méthode la plus rapide et la plus sécurisée car elle valide votre identité instantanément.",
+        "method_app_steps": [
+            "Ouvrez l'application Stockman.",
+            "Allez dans l'onglet **Réglages**.",
+            "Faites défiler jusqu'à la section **Zone de danger**.",
+            "Appuyez sur **Supprimer mon compte**.",
+            "Confirmez en saisissant votre mot de passe."
+        ],
+        "method_web_title": "2. Via ce formulaire (Sans l'application)",
+        "method_web_desc": "Si vous n'avez plus accès à l'application, vous pouvez nous envoyer une demande manuelle de suppression.",
+        "method_web_note": "Note : Pour des raisons de sécurité, nous devrons vérifier votre identité par email ou téléphone avant de procéder à la suppression.",
+        "data_erased_title": "Quelles données seront effacées ?",
+        "data_erased_desc": "La suppression de votre compte est **définitive** et irréversible. Les données suivantes seront immédiatement supprimées de nos serveurs de production :",
+        "data_erased_list": [
+            "Votre profil utilisateur et identifiants.",
+            "Toutes vos boutiques et points de vente.",
+            "L'intégralité de votre inventaire et catalogue produits.",
+            "Toutes vos transactions de vente et historiques comptables.",
+            "Vos listes de clients, fournisseurs et historiques d'achats.",
+            "Vos accès à l'Assistant IA et historiques de chat."
+        ],
+        "retention_title": "Délai de traitement",
+        "retention_desc": "Une fois la demande validée, vos données sont immédiatement marquées pour suppression. L'effacement complet de nos sauvegardes (backups) peut prendre jusqu'à 30 jours, pendant lesquels vos données restent inaccessibles et non traitées."
     },
     "newsletter": {
         "title": "Wontu karallo stok",
@@ -452,21 +563,5 @@
         "title": "Dawrugol njaayu",
         "version": "13 Féw 2026",
         "content": "<p>Jam e Stockman. Aar humpito maa timmungo ko liggeey men mawngol.</p><h3>1. Humpitooji nu denci</h3><p>Men dencat: innde maa, email, telefon, mbidduuji bitik maa, njaayu e humpitooji xarala (IP, device).</p><h3>2. Gollal humpitooji</h3><p>Humpito maa ngam: koldinu stok maa, aar sët maa, moƴƴinde gollal men e yoonu.</p><h3>3. Denc e Aar</h3><p>Humpito maa ena dencaa e MongoDB Atlas kadi ena aaraa (encrypted). HTTPS lo men kuutorɗen.</p><h3>4. Bokk humpitoji</h3><p>Men jëndata wala men luyata humpito maa. Ak partenaire xarala rek la men koy bokkata so yoonu naamni nu.</p><h3>5. Sarɗiiji maa (RGPD)</h3><p>A mawan yi'ude, soppide wala dakkal humpito maa e gollirgal e Paramètres.</p><h3>6. Woo nu</h3><p>So a jogii naamnal, woo nu e gollirgal wala e <a href='mailto:contact@stockman.pro' style='color:var(--primary)'>contact@stockman.pro</a>.</p>"
-    },
-    "faq": {
-        "title": "Naamne keewɗe",
-        "q1": "Mbele ina golla tawa internet alaa?",
-        "a1": "Eyyo, Stockman ina golla e gollal tawa internet alaa. Humpito maa ena simaye so internet arti.",
-        "q2": "Mbele humpitooji am ena aaraa?",
-        "a2": "Hoolu ɗum. Emin kuutorɗe njuɓɓudi aaraango hiisawal ngam aarude kala humpitooji njaaƴu maa."
-    },
-    "download": {
-        "title": "Mbele a paree ngir ɓeydude mbeesu maa?",
-        "subtitle": "Jokku e ujunnaaje njaaƴooɓe mbeesuugol njuɓɓudi mum en.",
-        "app_store": "App Store",
-        "google_play": "Google Play",
-        "secure": "Feygooji aaraango",
-        "support": "Ballo karallagal",
-        "updates": "Mbeesuuji jokkuɗi"
     }
 }
