--- a/landing-page/public/locales/hi.json
+++ b/landing-page/public/locales/hi.json
@@ -1,65 +1,145 @@
 {
     "nav": {
         "features": "विशेषताएं",
-        "pricing": "कीमतें",
-        "about": "हमारे बारे में",
+        "resources": "Ressources",
         "blog": "ब्लॉग",
-        "contact": "संपर्क",
+        "home": "Connexion",
         "login": "लॉगिन",
-        "get_started": "अभी शुरू करें"
+        "free_trial": "Essai Gratuit"
     },
     "hero": {
-        "badge": "अफ्रीका में लॉजिस्टिक्स में नंबर 1 🌍",
         "title_start": "अपने",
-        "title_highlight": "स्टोर",
         "title_end": "को प्रो की तरह प्रबंधित करें",
-        "desc": "एकीकृत POS सिस्टम, इन्वेंट्री प्रबंधन और लेखांकन। सरल, कुशल और कहीं भी उपलब्ध - बिना इंटरनेट के भी।",
-        "cta_primary": "मुफ्त में आजमाएं",
-        "cta_secondary": "डेमो देखें",
-        "trust": "5000+ से अधिक व्यापारियों का भरोसा"
-    },
-    "features_main": {
-        "title": "विकास के लिए आपकी ज़रूरत की हर चीज़",
-        "subtitle": "मैन्युअल नोटों को अलविदा कहें। डिजिटल प्रबंधन अपनाएं।",
-        "f1_title": "स्टॉक प्रबंधन",
-        "f1_desc": "वास्तविक समय में अपने उत्पादों को ट्रैक करें और स्टॉक खत्म होने के अलर्ट प्राप्त करें।",
-        "f2_title": "कैश रजिस्टर (POS)",
-        "f2_desc": "ग्राहकों को जल्दी सेवा दें और WhatsApp के माध्यम से डिजिटल रसीदें भेजें।",
-        "f3_title": "लेखांकन (Accounting)",
-        "f3_desc": "अपनी आय, लागत और लाभ को स्वचालित रूप से देखें।",
-        "f4_title": "ऑफलाइन मोड",
-        "f4_desc": "बिना इंटरनेट के भी बिक्री जारी रखें। कनेक्शन वापस आने पर डेटा सिंक हो जाएगा।",
-        "f5_title": "आर्टिफिशियल इंटेलिजेंस (AI)",
-        "f5_desc": "बिक्री के पीक समय का पूर्वानुमान लगाएं और अपनी खरीदारी को अनुकूलित करें।",
-        "f6_title": "मार्केटप्लेस",
-        "f6_desc": "सर्वोत्तम कीमतों पर सीधे सर्वोत्तम थोक विक्रेताओं से ऑर्डर करें।"
+        "subtitle": "La solution de gestion de stock intelligente dopée à l'IA pour automatiser vos commandes et maximiser vos profits.",
+        "cta": "Démarrer maintenant"
     },
     "stats": {
-        "merchants": "सक्रिय व्यापारी",
+        "shops": "Commerces équipés",
         "transactions": "मासिक लेनदेन",
-        "availability": "अपटाइम",
+        "satisfaction": "Clients satisfaits",
         "support": "24/7 सहायता"
+    },
+    "features": {
+        "title": "Vos outils quotidiens",
+        "subtitle": "Une suite complète d'onglets pour gérer chaque aspect de votre business.",
+        "dashboard": {
+            "title": "Accueil",
+            "desc": "Vue d'overview de votre activité, alertes de stock critiques et accès rapide à l'assistant IA."
+        },
+        "products": {
+            "title": "Produits",
+            "desc": "Gestion d'inventaire, scan code-barres, organisation par catégories et valorisation du stock."
+        },
+        "pos": {
+            "title": "Caisse",
+            "desc": "Encaissez vos clients rapidement, générez des reçus numériques et mettez à jour le stock en temps réel."
+        },
+        "suppliers": {
+            "title": "Fournisseurs",
+            "desc": "Annuaire fournisseurs, historique des commandes et accès à la Marketplace \"Bouton-à-Bouton\"."
+        },
+        "orders": {
+            "title": "Commandes",
+            "desc": "Suivi des commandes d'achat, réception des marchandises et mise à jour automatique des stocks."
+        },
+        "accounting": {
+            "title": "Comptabilité",
+            "desc": "Suivi précis des ventes, des dépenses et calcul automatique de la rentabilité par période."
+        },
+        "clients": {
+            "title": "Clients",
+            "desc": "Base de données clients, historique des achats et outils de fidélisation intégrés."
+        },
+        "settings": {
+            "title": "Réglages",
+            "desc": "Personnalisation de l'application, gestion des utilisateurs et configuration de votre boutique."
+        }
+    },
+    "showcase": {
+        "title": "L'interface qui change tout",
+        "subtitle": "Un design épuré, pensé pour vous faire gagner du temps.",
+        "app_interface": "Interface App"
+    },
+    "how_it_works": {
+        "title": "Démarrage rapide",
+        "subtitle": "Trois étapes simples pour transformer votre commerce.",
+        "step1": {
+            "title": "Créez votre compte",
+            "desc": "Téléchargez l'application et configurez votre boutique en moins de 2 minutes."
+        },
+        "step2": {
+            "title": "Scannez vos produits",
+            "desc": "Utilisez la caméra de votre téléphone pour ajouter rapidement votre stock."
+        },
+        "step3": {
+            "title": "Encaissez & Suivez",
+            "desc": "Faites vos premières ventes et regardez vos statistiques grimper en temps réel."
+        }
+    },
+    "testimonials": {
+        "title": "Ils nous font confiance",
+        "subtitle": "Découvrez comment Stockman aide les commerçants au quotidien.",
+        "t1": "Depuis que j'utilise Stockman, je ne perds plus d'argent à cause des ruptures de stock. L'IA me prévient toujours au bon moment !",
+        "t1_author": "Amadou Diallo",
+        "t1_job": "Boutique Électronique",
+        "t2": "L'application est tellement simple. Mes employés l'ont prise en main en 10 minutes. La gestion de caisse est parfaite.",
+        "t2_author": "Sarah Kouassi",
+        "t2_job": "Supermarché Express",
+        "t3": "J'adore la marketplace ! Je peux comparer les prix de mes fournisseurs et commander directement. Un gain de temps énorme.",
+        "t3_author": "Paul N'Goma",
+        "t3_job": "Pharmacie Centrale"
     },
     "pricing": {
         "title": "सरल कीमतें, कोई छुपा हुआ शुल्क नहीं",
         "subtitle": "मुफ्त में शुरू करें, अपनी गति से बढ़ें।",
-        "free_title": "स्टार्ट",
-        "free_price": "0 FCFA",
-        "free_desc": "छोटे बिक्री केंद्रों के लिए",
-        "premium_title": "प्रीमियम",
-        "premium_price": "5,000 FCFA",
-        "premium_desc": "आपके व्यवसाय के लिए पूरी शक्ति",
-        "feature_pos": "एकीकृत कैश रजिस्टर",
-        "feature_stock": "स्टॉक प्रबंधन",
-        "feature_accounting": "लेखांकन",
-        "feature_multi_user": "असीमित कर्मचारी",
-        "feature_ai": "AI विश्लेषण",
-        "cta": "प्लान चुनें"
+        "month": "/mois",
+        "popular": "Populaire",
+        "starter": {
+            "name": "Starter",
+            "f1": "1 Utilisateur, 1 Boutique",
+            "f2": "100 produits",
+            "f3": "14 Requêtes IA / semaine",
+            "f4": "Rapports sur 30 jours",
+            "cta": "3 Mois Gratuits"
+        },
+        "business": {
+            "name": "Premium",
+            "f1": "Utilisateurs illimités",
+            "f2": "Produits illimités",
+            "f3": "Assistant IA illimité",
+            "f4": "Marketplace & CRM",
+            "f5": "Analyses & Rapports illimités",
+            "cta": "3 Mois Gratuits"
+        },
+        "enterprise": {
+            "name": "Enterprise",
+            "price": "Sur devis",
+            "f1": "Multi-boutiques",
+            "f2": "Support dédié 24/7",
+            "f3": "API & Intégrations",
+            "f4": "IA personnalisée",
+            "cta": "Contacter"
+        }
+    },
+    "faq": {
+        "title": "Questions Fréquentes",
+        "q1": "Est-ce que ça marche sans internet ?",
+        "a1": "Oui, Stockman fonctionne en mode hors-ligne. Vos données sont synchronisées dès que vous retrouvez une connexion.",
+        "q2": "Mes données sont-elles sécurisées ?",
+        "a2": "Absolument. Nous utilisons un chiffrement de niveau bancaire pour protéger toutes vos informations commerciales."
+    },
+    "download": {
+        "title": "Prêt à passer au niveau supérieur ?",
+        "subtitle": "Rejoignez des milliers de commerçants qui ont modernisé leur gestion.",
+        "app_store": "App Store",
+        "google_play": "Google Play",
+        "secure": "Paiements Sécurisés",
+        "support": "Support Pro",
+        "updates": "Mise à jour Continue"
     },
     "footer": {
         "desc": "अफ्रीका में व्यापार के डिजिटलीकरण के लिए नंबर 1 समाधान।",
         "product": "उत्पाद",
-        "company": "कंपनी",
         "support": "सहायता",
         "legal": "कानूनी",
         "help_center": "सहायता केंद्र",
@@ -67,8 +147,39 @@
         "community": "समुदाय",
         "privacy": "गोपनीयता नीति",
         "terms": "उपयोग की शर्तें",
+        "delete_account": "Supprimer mon compte",
         "legal_notice": "कानूनी नोटिस",
         "copyright": "© 2026 Stockman. सर्वाधिकार सुरक्षित।"
+    },
+    "delete_account": {
+        "title": "Suppression de Compte & Données",
+        "subtitle": "Conformément au Règlement Général sur la Protection des Données (RGPD) et au Droit à l'Oubli.",
+        "version": "Dernière mise à jour : 18 Février 2026",
+        "intro": "Vous avez le contrôle total de vos données. Si vous souhaitez cesser d'utiliser Stockman, vous pouvez supprimer votre compte et l'intégralité des données associées de deux manières.",
+        "method_app_title": "1. Via l'application (Recommandé)",
+        "method_app_desc": "C'est la méthode la plus rapide et la plus sécurisée car elle valide votre identité instantanément.",
+        "method_app_steps": [
+            "Ouvrez l'application Stockman.",
+            "Allez dans l'onglet **Réglages**.",
+            "Faites défiler jusqu'à la section **Zone de danger**.",
+            "Appuyez sur **Supprimer mon compte**.",
+            "Confirmez en saisissant votre mot de passe."
+        ],
+        "method_web_title": "2. Via ce formulaire (Sans l'application)",
+        "method_web_desc": "Si vous n'avez plus accès à l'application, vous pouvez nous envoyer une demande manuelle de suppression.",
+        "method_web_note": "Note : Pour des raisons de sécurité, nous devrons vérifier votre identité par email ou téléphone avant de procéder à la suppression.",
+        "data_erased_title": "Quelles données seront effacées ?",
+        "data_erased_desc": "La suppression de votre compte est **définitive** et irréversible. Les données suivantes seront immédiatement supprimées de nos serveurs de production :",
+        "data_erased_list": [
+            "Votre profil utilisateur et identifiants.",
+            "Toutes vos boutiques et points de vente.",
+            "L'intégralité de votre inventaire et catalogue produits.",
+            "Toutes vos transactions de vente et historiques comptables.",
+            "Vos listes de clients, fournisseurs et historiques d'achats.",
+            "Vos accès à l'Assistant IA et historiques de chat."
+        ],
+        "retention_title": "Délai de traitement",
+        "retention_desc": "Une fois la demande validée, vos données sont immédiatement marquées pour suppression. L'effacement complet de nos sauvegardes (backups) peut prendre jusqu'à 30 jours, pendant lesquels vos données restent inaccessibles et non traitées."
     },
     "newsletter": {
         "title": "स्टॉक विशेषज्ञ बनें",
