--- a/landing-page/public/locales/it.json
+++ b/landing-page/public/locales/it.json
@@ -80,12 +80,12 @@
         "title": "Si fidano di noi",
         "subtitle": "Scopri come Stockman aiuta i commercianti ogni giorno.",
         "t1": "Da quando uso Stockman, non perdo più soldi a causa delle rotture di stock. L'IA mi avvisa sempre al momento giusto!",
-        "t2": "L'app è semplicissima. I miei dipendenti l'hanno imparata in 10 minuti. La gestione della cassa è perfetta.",
-        "t3": "Adoro il marketplace! Posso confrontare i prezzi dei miei fornitori e ordinare direttamente. Un enorme risparmio di tempo.",
         "t1_author": "Amadou Diallo",
         "t1_job": "Electronics Shop",
+        "t2": "L'app è semplicissima. I miei dipendenti l'hanno imparata in 10 minuti. La gestione della cassa è perfetta.",
         "t2_author": "Sarah Kouassi",
         "t2_job": "Express Supermarket",
+        "t3": "Adoro il marketplace! Posso confrontare i prezzi dei miei fornitori e ordinare direttamente. Un enorme risparmio di tempo.",
         "t3_author": "Paul N'Goma",
         "t3_job": "Central Pharmacy"
     },
@@ -131,6 +131,8 @@
     "download": {
         "title": "Pronto a fare il salto di qualità?",
         "subtitle": "Unisciti a migliaia di commercianti che hanno modernizzato la loro gestione.",
+        "app_store": "App Store",
+        "google_play": "Google Play",
         "secure": "Pagamenti sicuri",
         "support": "Supporto professionale",
         "updates": "Aggiornamenti continui"
@@ -145,8 +147,39 @@
         "community": "Comunità",
         "privacy": "Privacy",
         "terms": "Condizioni d'uso",
+        "delete_account": "Supprimer mon compte",
         "legal_notice": "Note legali",
         "copyright": "© 2026 Stockman. Tutti i diritti riservati."
+    },
+    "delete_account": {
+        "title": "Suppression de Compte & Données",
+        "subtitle": "Conformément au Règlement Général sur la Protection des Données (RGPD) et au Droit à l'Oubli.",
+        "version": "Dernière mise à jour : 18 Février 2026",
+        "intro": "Vous avez le contrôle total de vos données. Si vous souhaitez cesser d'utiliser Stockman, vous pouvez supprimer votre compte et l'intégralité des données associées de deux manières.",
+        "method_app_title": "1. Via l'application (Recommandé)",
+        "method_app_desc": "C'est la méthode la plus rapide et la plus sécurisée car elle valide votre identité instantanément.",
+        "method_app_steps": [
+            "Ouvrez l'application Stockman.",
+            "Allez dans l'onglet **Réglages**.",
+            "Faites défiler jusqu'à la section **Zone de danger**.",
+            "Appuyez sur **Supprimer mon compte**.",
+            "Confirmez en saisissant votre mot de passe."
+        ],
+        "method_web_title": "2. Via ce formulaire (Sans l'application)",
+        "method_web_desc": "Si vous n'avez plus accès à l'application, vous pouvez nous envoyer une demande manuelle de suppression.",
+        "method_web_note": "Note : Pour des raisons de sécurité, nous devrons vérifier votre identité par email ou téléphone avant de procéder à la suppression.",
+        "data_erased_title": "Quelles données seront effacées ?",
+        "data_erased_desc": "La suppression de votre compte est **définitive** et irréversible. Les données suivantes seront immédiatement supprimées de nos serveurs de production :",
+        "data_erased_list": [
+            "Votre profil utilisateur et identifiants.",
+            "Toutes vos boutiques et points de vente.",
+            "L'intégralité de votre inventaire et catalogue produits.",
+            "Toutes vos transactions de vente et historiques comptables.",
+            "Vos listes de clients, fournisseurs et historiques d'achats.",
+            "Vos accès à l'Assistant IA et historiques de chat."
+        ],
+        "retention_title": "Délai de traitement",
+        "retention_desc": "Une fois la demande validée, vos données sont immédiatement marquées pour suppression. L'effacement complet de nos sauvegardes (backups) peut prendre jusqu'à 30 jours, pendant lesquels vos données restent inaccessibles et non traitées."
     },
     "newsletter": {
         "title": "Diventa un esperto di magazzino",
