--- a/landing-page/public/locales/ru.json
+++ b/landing-page/public/locales/ru.json
@@ -80,12 +80,12 @@
         "title": "Нам доверяют",
         "subtitle": "Узнайте, как Stockman помогает предпринимателям каждый день.",
         "t1": "С тех пор как я использую Stockman, я больше не теряю деньги из-за отсутствия товаров. ИИ всегда предупреждает меня вовремя!",
-        "t2": "Приложение очень простое. Мои сотрудники освоили его за 10 минут. Управление кассой идеальное.",
-        "t3": "Обожаю маркетплейс! Я могу сравнивать цены поставщиков и заказывать напрямую. Огромная экономия времени.",
         "t1_author": "Amadou Diallo",
         "t1_job": "Electronics Shop",
+        "t2": "Приложение очень простое. Мои сотрудники освоили его за 10 минут. Управление кассой идеальное.",
         "t2_author": "Sarah Kouassi",
         "t2_job": "Express Supermarket",
+        "t3": "Обожаю маркетплейс! Я могу сравнивать цены поставщиков и заказывать напрямую. Огромная экономия времени.",
         "t3_author": "Paul N'Goma",
         "t3_job": "Central Pharmacy"
     },
@@ -131,6 +131,8 @@
     "download": {
         "title": "Готовы выйти на новый уровень?",
         "subtitle": "Присоединяйтесь к тысячам предпринимателей, которые модернизируют свое управление.",
+        "app_store": "App Store",
+        "google_play": "Google Play",
         "secure": "Безопасные платежи",
         "support": "Профессиональная поддержка",
         "updates": "Постоянные обновления"
@@ -145,8 +147,39 @@
         "community": "Сообщество",
         "privacy": "Политика конфиденциальности",
         "terms": "Условия использования",
+        "delete_account": "Supprimer mon compte",
         "legal_notice": "Правовое уведомление",
         "copyright": "© 2026 Stockman. Все права защищены."
+    },
+    "delete_account": {
+        "title": "Suppression de Compte & Données",
+        "subtitle": "Conformément au Règlement Général sur la Protection des Données (RGPD) et au Droit à l'Oubli.",
+        "version": "Dernière mise à jour : 18 Février 2026",
+        "intro": "Vous avez le contrôle total de vos données. Si vous souhaitez cesser d'utiliser Stockman, vous pouvez supprimer votre compte et l'intégralité des données associées de deux manières.",
+        "method_app_title": "1. Via l'application (Recommandé)",
+        "method_app_desc": "C'est la méthode la plus rapide et la plus sécurisée car elle valide votre identité instantanément.",
+        "method_app_steps": [
+            "Ouvrez l'application Stockman.",
+            "Allez dans l'onglet **Réglages**.",
+            "Faites défiler jusqu'à la section **Zone de danger**.",
+            "Appuyez sur **Supprimer mon compte**.",
+            "Confirmez en saisissant votre mot de passe."
+        ],
+        "method_web_title": "2. Via ce formulaire (Sans l'application)",
+        "method_web_desc": "Si vous n'avez plus accès à l'application, vous pouvez nous envoyer une demande manuelle de suppression.",
+        "method_web_note": "Note : Pour des raisons de sécurité, nous devrons vérifier votre identité par email ou téléphone avant de procéder à la suppression.",
+        "data_erased_title": "Quelles données seront effacées ?",
+        "data_erased_desc": "La suppression de votre compte est **définitive** et irréversible. Les données suivantes seront immédiatement supprimées de nos serveurs de production :",
+        "data_erased_list": [
+            "Votre profil utilisateur et identifiants.",
+            "Toutes vos boutiques et points de vente.",
+            "L'intégralité de votre inventaire et catalogue produits.",
+            "Toutes vos transactions de vente et historiques comptables.",
+            "Vos listes de clients, fournisseurs et historiques d'achats.",
+            "Vos accès à l'Assistant IA et historiques de chat."
+        ],
+        "retention_title": "Délai de traitement",
+        "retention_desc": "Une fois la demande validée, vos données sont immédiatement marquées pour suppression. L'effacement complet de nos sauvegardes (backups) peut prendre jusqu'à 30 jours, pendant lesquels vos données restent inaccessibles et non traitées."
     },
     "newsletter": {
         "title": "Станьте экспертом в управлении запасами",
