--- a/landing-page/public/locales/wo.json
+++ b/landing-page/public/locales/wo.json
@@ -1,65 +1,145 @@
 {
     "nav": {
         "features": "Xarala yi",
-        "pricing": "Njeg yi",
-        "about": "Lu nu soxal",
+        "resources": "Ressources",
         "blog": "Blog",
-        "contact": "Woo nu",
+        "home": "Connexion",
         "login": "Ubbi sa sët",
-        "get_started": "Dore léegi"
+        "free_trial": "Essai Gratuit"
     },
     "hero": {
-        "badge": "Numéro 1 ci logistique bi ci Afrik 🌍",
         "title_start": "Saytul",
-        "title_highlight": "sa dëkkaay njaay",
         "title_end": "ni njiit",
-        "desc": "POS bu mat, saytu mbiddu ak kote njaay. Yomb na, am na doole te mën nga ko jëfandikoo fépp - ba ci lu amul internet.",
-        "cta_primary": "Natt ko feyeer",
-        "cta_secondary": "Xoolal natt bi",
-        "trust": "Lu ëpp 5000 njaaykat nangu nanu ko"
-    },
-    "features_main": {
-        "title": "Lépp lu la soxal ngir yokkuté",
-        "subtitle": "Bayyil bind ci kaye yi. Jëlal saytu bu xarala.",
-        "f1_title": "Saytu mbiddu",
-        "f1_desc": "Topal sa mbiddu yi ci sa waxtu te xam bala nu jeex.",
-        "f2_title": "POS (Caisse)",
-        "f2_desc": "Teru sa kilyan yi ci gaawaay te yónne leen resit ci WhatsApp.",
-        "f3_title": "Kote njaay (Accounting)",
-        "f3_desc": "Xoolal sa yokkuté, sa njaay ak sa mën-mën ci léegi.",
-        "f4_title": "Lu amul internet",
-        "f4_desc": "Wéyal sa njaay ba ci lu amul internet. Boo amee internet lépp dina simay.",
-        "f5_title": "IA (Xel bu xarala)",
-        "f5_desc": "Xamël kaxu njaay yi te baaxal sa ndeyjoor.",
-        "f6_title": "Marketplace",
-        "f6_desc": "Jëndal sa mbiddu yi ci grossiste yi gën a baax te am njeeg yu yomb."
+        "subtitle": "La solution de gestion de stock intelligente dopée à l'IA pour automatiser vos commandes et maximiser vos profits.",
+        "cta": "Démarrer maintenant"
     },
     "stats": {
-        "merchants": "Njaaykat yu nekk ci biir",
+        "shops": "Commerces équipés",
         "transactions": "Njaay ci weer bi",
-        "availability": "Dox bi",
+        "satisfaction": "Clients satisfaits",
         "support": "Ndimal 24/7"
+    },
+    "features": {
+        "title": "Vos outils quotidiens",
+        "subtitle": "Une suite complète d'onglets pour gérer chaque aspect de votre business.",
+        "dashboard": {
+            "title": "Accueil",
+            "desc": "Vue d'overview de votre activité, alertes de stock critiques et accès rapide à l'assistant IA."
+        },
+        "products": {
+            "title": "Produits",
+            "desc": "Gestion d'inventaire, scan code-barres, organisation par catégories et valorisation du stock."
+        },
+        "pos": {
+            "title": "Caisse",
+            "desc": "Encaissez vos clients rapidement, générez des reçus numériques et mettez à jour le stock en temps réel."
+        },
+        "suppliers": {
+            "title": "Fournisseurs",
+            "desc": "Annuaire fournisseurs, historique des commandes et accès à la Marketplace \"Bouton-à-Bouton\"."
+        },
+        "orders": {
+            "title": "Commandes",
+            "desc": "Suivi des commandes d'achat, réception des marchandises et mise à jour automatique des stocks."
+        },
+        "accounting": {
+            "title": "Comptabilité",
+            "desc": "Suivi précis des ventes, des dépenses et calcul automatique de la rentabilité par période."
+        },
+        "clients": {
+            "title": "Clients",
+            "desc": "Base de données clients, historique des achats et outils de fidélisation intégrés."
+        },
+        "settings": {
+            "title": "Réglages",
+            "desc": "Personnalisation de l'application, gestion des utilisateurs et configuration de votre boutique."
+        }
+    },
+    "showcase": {
+        "title": "L'interface qui change tout",
+        "subtitle": "Un design épuré, pensé pour vous faire gagner du temps.",
+        "app_interface": "Interface App"
+    },
+    "how_it_works": {
+        "title": "Démarrage rapide",
+        "subtitle": "Trois étapes simples pour transformer votre commerce.",
+        "step1": {
+            "title": "Créez votre compte",
+            "desc": "Téléchargez l'application et configurez votre boutique en moins de 2 minutes."
+        },
+        "step2": {
+            "title": "Scannez vos produits",
+            "desc": "Utilisez la caméra de votre téléphone pour ajouter rapidement votre stock."
+        },
+        "step3": {
+            "title": "Encaissez & Suivez",
+            "desc": "Faites vos premières ventes et regardez vos statistiques grimper en temps réel."
+        }
+    },
+    "testimonials": {
+        "title": "Ils nous font confiance",
+        "subtitle": "Découvrez comment Stockman aide les commerçants au quotidien.",
+        "t1": "Depuis que j'utilise Stockman, je ne perds plus d'argent à cause des ruptures de stock. L'IA me prévient toujours au bon moment !",
+        "t1_author": "Amadou Diallo",
+        "t1_job": "Boutique Électronique",
+        "t2": "L'application est tellement simple. Mes employés l'ont prise en main en 10 minutes. La gestion de caisse est parfaite.",
+        "t2_author": "Sarah Kouassi",
+        "t2_job": "Supermarché Express",
+        "t3": "J'adore la marketplace ! Je peux comparer les prix de mes fournisseurs et commander directement. Un gain de temps énorme.",
+        "t3_author": "Paul N'Goma",
+        "t3_job": "Pharmacie Centrale"
     },
     "pricing": {
         "title": "Njeeg yu leer, amul lën-lën",
         "subtitle": "Doreal feyeer, yokkul ni la neexee.",
-        "free_title": "Dore",
-        "free_price": "0 FCFA",
-        "free_desc": "Ngir njaaykat yu ndaw yi",
-        "premium_title": "Premium",
-        "premium_price": "5,000 FCFA",
-        "premium_desc": "Doole bi mat ngir sa njaay",
-        "feature_pos": "POS bu mat",
-        "feature_stock": "Saytu mbiddu",
-        "feature_accounting": "Kote njaay",
-        "feature_multi_user": "Liggeeykat yu ëpp",
-        "feature_ai": "Saytu IA",
-        "cta": "Tannal sa plan"
+        "month": "/mois",
+        "popular": "Populaire",
+        "starter": {
+            "name": "Starter",
+            "f1": "1 Utilisateur, 1 Boutique",
+            "f2": "100 produits",
+            "f3": "14 Requêtes IA / semaine",
+            "f4": "Rapports sur 30 jours",
+            "cta": "3 Mois Gratuits"
+        },
+        "business": {
+            "name": "Premium",
+            "f1": "Utilisateurs illimités",
+            "f2": "Produits illimités",
+            "f3": "Assistant IA illimité",
+            "f4": "Marketplace & CRM",
+            "f5": "Analyses & Rapports illimités",
+            "cta": "3 Mois Gratuits"
+        },
+        "enterprise": {
+            "name": "Enterprise",
+            "price": "Sur devis",
+            "f1": "Multi-boutiques",
+            "f2": "Support dédié 24/7",
+            "f3": "API & Intégrations",
+            "f4": "IA personnalisée",
+            "cta": "Contacter"
+        }
+    },
+    "faq": {
+        "title": "Laaj yi nu bari laaj",
+        "q1": "Ndax mu ngi liggeey te amul internet?",
+        "a1": "Waaw, Stockman mu ngi liggeey ci mode offline. Sa mbiddu yi danuy simay sàssu internet bi delloo si.",
+        "q2": "Ndax sa mbiddu yi aaru nanu?",
+        "a2": "Dëgg la. Danuy jëfandikoo xarala bu fukk ngir aar sa mbiddu njaay yi."
+    },
+    "download": {
+        "title": "Ndax pare nga ngir wàcc ci sigoŋ bi?",
+        "subtitle": "Bokkal ci njaaykat yu bari yu baaxal sen saytu.",
+        "app_store": "App Store",
+        "google_play": "Google Play",
+        "secure": "Fey bi mu ngi aaru",
+        "support": "Ndimal xarala",
+        "updates": "Xarala yu bees bépp bës"
     },
     "footer": {
         "desc": "Solisyon numéro 1 ngir baaxal njaay ci Afrik.",
         "product": "Mbiddu",
-        "company": "Kër gi",
         "support": "Ndimal",
         "legal": "Yoon",
         "help_center": "Kër ndimal",
@@ -67,8 +147,39 @@
         "community": "Mbooloo mi",
         "privacy": "Aar mbiddu",
         "terms": "Sartu jëfandikoo",
+        "delete_account": "Supprimer mon compte",
         "legal_notice": "Xibaaru yoon",
         "copyright": "© 2026 Stockman. Lu nu aar la."
+    },
+    "delete_account": {
+        "title": "Suppression de Compte & Données",
+        "subtitle": "Conformément au Règlement Général sur la Protection des Données (RGPD) et au Droit à l'Oubli.",
+        "version": "Dernière mise à jour : 18 Février 2026",
+        "intro": "Vous avez le contrôle total de vos données. Si vous souhaitez cesser d'utiliser Stockman, vous pouvez supprimer votre compte et l'intégralité des données associées de deux manières.",
+        "method_app_title": "1. Via l'application (Recommandé)",
+        "method_app_desc": "C'est la méthode la plus rapide et la plus sécurisée car elle valide votre identité instantanément.",
+        "method_app_steps": [
+            "Ouvrez l'application Stockman.",
+            "Allez dans l'onglet **Réglages**.",
+            "Faites défiler jusqu'à la section **Zone de danger**.",
+            "Appuyez sur **Supprimer mon compte**.",
+            "Confirmez en saisissant votre mot de passe."
+        ],
+        "method_web_title": "2. Via ce formulaire (Sans l'application)",
+        "method_web_desc": "Si vous n'avez plus accès à l'application, vous pouvez nous envoyer une demande manuelle de suppression.",
+        "method_web_note": "Note : Pour des raisons de sécurité, nous devrons vérifier votre identité par email ou téléphone avant de procéder à la suppression.",
+        "data_erased_title": "Quelles données seront effacées ?",
+        "data_erased_desc": "La suppression de votre compte est **définitive** et irréversible. Les données suivantes seront immédiatement supprimées de nos serveurs de production :",
+        "data_erased_list": [
+            "Votre profil utilisateur et identifiants.",
+            "Toutes vos boutiques et points de vente.",
+            "L'intégralité de votre inventaire et catalogue produits.",
+            "Toutes vos transactions de vente et historiques comptables.",
+            "Vos listes de clients, fournisseurs et historiques d'achats.",
+            "Vos accès à l'Assistant IA et historiques de chat."
+        ],
+        "retention_title": "Délai de traitement",
+        "retention_desc": "Une fois la demande validée, vos données sont immédiatement marquées pour suppression. L'effacement complet de nos sauvegardes (backups) peut prendre jusqu'à 30 jours, pendant lesquels vos données restent inaccessibles et non traitées."
     },
     "newsletter": {
         "title": "Nekkaltal njiit ci saytu mbiddu",
@@ -377,18 +488,7 @@
         "value2_title": "🤝 Dokkante",
         "value2_desc": "Fi lu nu dëkk — danu xam sa dund ak sa jàfe-jàfe.",
         "value3_title": "🚀 Xarala mu bees",
-        "value3_desc": "Danuy gën a baaxal Stockman bépp bës ndax sa bataaxal yi.",
-        "mission_vision": "Sosal njaay bu bees, bu mat te sukkandiku ci xaralam.",
-        "values_list": [
-            {
-                "title": "Simplisité",
-                "desc": "Logiciel bu yomb te gaaw."
-            },
-            {
-                "title": "Dokkanté",
-                "desc": "Dëkk fi ak yeen waxtu wu ne."
-            }
-        ]
+        "value3_desc": "Danuy gën a baaxal Stockman bépp bës ndax sa bataaxal yi."
     },
     "blog": {
         "seo_title": "Blog ak ndimal",
@@ -463,21 +563,5 @@
         "title": "Aar mbiddu",
         "version": "13 Féw 2026",
         "content": "<p>Dalal ak jàmm ci Stockman. Aar sa mbiddu nit mooy sunu liggeey bu jëkk.</p><h3>1. Mbiddu yi nu denc</h3><p>Danu denc: sa tur, email, telefon, mbiddu sa shop, njaay ak mbiddu xarala (IP, xarala).</p><h3>2. Njariñu mbiddu yi</h3><p>Sa mbiddu ngir: saytu sa stock, aar sa sët, baaxal sunu liggeey ak yoon.</p><h3>3. Denc ak Aar</h3><p>Sa mbiddu danuxu denc ci MongoDB Atlas te dëjj nanu ko (encrypted). HTTPS lo nu jëfandikoo.</p><h3>4. Bokk mbiddu yi</h3><p>Danu jëndul wala nuy luyee sa mbiddu. Ak sunu partenaire xarala rek la nu koy bokkal bala yoon woo nu.</p><h3>5. Sa sàrtu (RGPD)</h3><p>Mën nga xool, soppi wala dakkal sa mbiddu ci aplikasyon bi ci Paramètres.</p><h3>6. Woo nu</h3><p>Soo amee laaj, woo nu ci aplikasyon bi wala ci <a href='mailto:contact@stockman.pro' style='color:var(--primary)'>contact@stockman.pro</a>.</p>"
-    },
-    "faq": {
-        "title": "Laaj yi nu bari laaj",
-        "q1": "Ndax mu ngi liggeey te amul internet?",
-        "a1": "Waaw, Stockman mu ngi liggeey ci mode offline. Sa mbiddu yi danuy simay sàssu internet bi delloo si.",
-        "q2": "Ndax sa mbiddu yi aaru nanu?",
-        "a2": "Dëgg la. Danuy jëfandikoo xarala bu fukk ngir aar sa mbiddu njaay yi."
-    },
-    "download": {
-        "title": "Ndax pare nga ngir wàcc ci sigoŋ bi?",
-        "subtitle": "Bokkal ci njaaykat yu bari yu baaxal sen saytu.",
-        "app_store": "App Store",
-        "google_play": "Google Play",
-        "secure": "Fey bi mu ngi aaru",
-        "support": "Ndimal xarala",
-        "updates": "Xarala yu bees bépp bës"
     }
 }
