--- a/landing-page/public/locales/zh.json
+++ b/landing-page/public/locales/zh.json
@@ -80,12 +80,12 @@
         "title": "客户信任",
         "subtitle": "了解 Stockman 如何每天帮助商户。",
         "t1": "自从使用 Stockman 以来，我再也没有因为缺货而损失金钱。人工智能总是在正确的时间提醒我！",
-        "t2": "这款应用非常简单。我的员工在 10 分钟内就学会了。收银管理非常完美。",
-        "t3": "我非常喜欢采购市场！我可以比较供应商的价格并直接下单。节省了大量时间。",
         "t1_author": "Amadou Diallo",
         "t1_job": "Electronics Shop",
+        "t2": "这款应用非常简单。我的员工在 10 分钟内就学会了。收银管理非常完美。",
         "t2_author": "Sarah Kouassi",
         "t2_job": "Express Supermarket",
+        "t3": "我非常喜欢采购市场！我可以比较供应商的价格并直接下单。节省了大量时间。",
         "t3_author": "Paul N'Goma",
         "t3_job": "Central Pharmacy"
     },
@@ -147,8 +147,39 @@
         "community": "社区",
         "privacy": "隐私政策",
         "terms": "服务条款",
+        "delete_account": "Supprimer mon compte",
         "legal_notice": "法律声明",
         "copyright": "© 2026 Stockman. 保留所有权利。"
+    },
+    "delete_account": {
+        "title": "Suppression de Compte & Données",
+        "subtitle": "Conformément au Règlement Général sur la Protection des Données (RGPD) et au Droit à l'Oubli.",
+        "version": "Dernière mise à jour : 18 Février 2026",
+        "intro": "Vous avez le contrôle total de vos données. Si vous souhaitez cesser d'utiliser Stockman, vous pouvez supprimer votre compte et l'intégralité des données associées de deux manières.",
+        "method_app_title": "1. Via l'application (Recommandé)",
+        "method_app_desc": "C'est la méthode la plus rapide et la plus sécurisée car elle valide votre identité instantanément.",
+        "method_app_steps": [
+            "Ouvrez l'application Stockman.",
+            "Allez dans l'onglet **Réglages**.",
+            "Faites défiler jusqu'à la section **Zone de danger**.",
+            "Appuyez sur **Supprimer mon compte**.",
+            "Confirmez en saisissant votre mot de passe."
+        ],
+        "method_web_title": "2. Via ce formulaire (Sans l'application)",
+        "method_web_desc": "Si vous n'avez plus accès à l'application, vous pouvez nous envoyer une demande manuelle de suppression.",
+        "method_web_note": "Note : Pour des raisons de sécurité, nous devrons vérifier votre identité par email ou téléphone avant de procéder à la suppression.",
+        "data_erased_title": "Quelles données seront effacées ?",
+        "data_erased_desc": "La suppression de votre compte est **définitive** et irréversible. Les données suivantes seront immédiatement supprimées de nos serveurs de production :",
+        "data_erased_list": [
+            "Votre profil utilisateur et identifiants.",
+            "Toutes vos boutiques et points de vente.",
+            "L'intégralité de votre inventaire et catalogue produits.",
+            "Toutes vos transactions de vente et historiques comptables.",
+            "Vos listes de clients, fournisseurs et historiques d'achats.",
+            "Vos accès à l'Assistant IA et historiques de chat."
+        ],
+        "retention_title": "Délai de traitement",
+        "retention_desc": "Une fois la demande validée, vos données sont immédiatement marquées pour suppression. L'effacement complet de nos sauvegardes (backups) peut prendre jusqu'à 30 jours, pendant lesquels vos données restent inaccessibles et non traitées."
     },
     "newsletter": {
         "title": "成为库存管理专家",
